--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -11,3 +11,9 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push to DockerHub
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/prestashop:latest, ${{ secrets.DOCKERHUB_USERNAME }}/prestashop:8, ${{ secrets.DOCKERHUB_USERNAME }}/prestashop:${{ github.sha }}
