--- a/containers/nginx/nginx.conf
+++ b/containers/nginx/nginx.conf
@@ -5,29 +5,34 @@
 # -------------------------------------------------------------------------------------------------
 
 server {
+    # Server tokens hides the nginx identifying itself
+    server_tokens off;
     # Ipv4
-    listen 80 default_server;
+    listen 80;
 
     # IPv6
-    listen [::]:80 default_server;
+    listen [::]:80;
 
     # SSL Ipv4 & v6
-    # listen 443 ssl http2;
-    # listen [::]:443 ssl http2;
+    listen 443 default_server ssl http2;
+    listen [::]:443 ssl http2;
 
     # Your SSL Certificates, don't forget to take a look at Certbot (https://certbot.eff.org)
-    # ssl_certificate /etc/ssl/fullchain.pem;
-    # ssl_certificate_key /etc/ssl/privkey.pem;
+    ssl_certificate /etc/nginx/ssl/live/__NGINX_HOST__/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/__NGINX_HOST__/privkey.pem;
 
-    # ssl_session_timeout 24h;
-    # ssl_session_cache shared:SSL:10m;
-    # ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-    # ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:RSA+3DES:AES128-SHA:!ADH:!AECDH:!MD5;
-    # ssl_prefer_server_ciphers on;
-    # Do not forget to create this file before with OpenSSL : "openssl dhparam -out /etc/nginx/ssl/dhparam.pem 2048"
-    # ssl_dhparam /etc/nginx/ssl/dhparam.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-    server_name __NGINX_HOST__;
+    server_name __NGINX_HOST__ www.__NGINX_HOST__;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
 
     root /var/www/html;
 
@@ -78,7 +83,7 @@ server {
     # HSTS (Force clients to interact with your website using HTTPS only)
     # For enhanced security, register your site here: https://hstspreload.org/
     # WARNING: Don't use this if your site is not fully on HTTPS!
-    # add_header Strict-Transport-Security "max-age=63072000; includeSubDomains" preload; always;
+    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains" preload; always;
 
     rewrite ^/__PS_LANGUAGE__$ /__PS_LANGUAGE__/ redirect;
     rewrite ^/__PS_LANGUAGE__/(.*) /$1;
@@ -199,6 +204,6 @@ server {
         fastcgi_max_temp_file_size 0;
         fastcgi_temp_file_write_size 256k;
 
-	    fastcgi_pass __APP_ENV___php:9000;
+	    fastcgi_pass __PHP_FPM_CONTAINER_NAME__:9000;
     }
 }
