--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,26 @@
-# Application
-APP_ENV=dev
-
 # Database
-DB_PASSWD=mSNC256re^H0
+DB_SERVER=db
+DB_NAME=dev_db
+DB_USER=dev_db_user
+DB_PASSWD=your_db_password
 
 # SuperAdmin
-ADMIN_MAIL=e.garvisovenegas@gmail.com
+ADMIN_MAIL=demo@demo.com
 ADMIN_PASSWD=demodemo
 ADMIN_FIRSTNAME=Esteban
 ADMIN_LASTNAME=Garviso
 
 # PrestaShop
-PS_PORT=80
-PS_DEV_MODE=1
+PS_DOMAIN=domain.com
+PS_DEV_MODE=0
 PS_VERSION=8.0.1
-PS_ENABLE_SSL=0
+PS_ENABLE_SSL=1
 PS_LANGUAGE=es
 PS_COUNTRY=CL
 PS_TIMEZONE=America/Santiago
 PS_SHOP_NAME=Mi Tienda de Prueba
 PS_FOLDER_ADMIN=admin-dev
+PS_FOLDER_INSTALL=install-dev
+
+# Reverse Proxy
+PROXY_RESOLVER_EMAIL=info@domain.com
