--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,58 +1,41 @@
 version: '3.9'
 services:
-  mysql:
+  db:
     build:
-      context: ./docker-images/mysql
-      args:
-        MYSQL_VERSION: ${MYSQL_VERSION:-8.0.32}
+      context: ./containers/mysql
     tty: true
-    container_name: ${APP_ENV}_mysql
     restart: always
     ports:
-      - '3306:3306'
+      - 3306:3306
     profiles:
       - db
     networks:
       - back-tier
     environment:
-      MYSQL_DATABASE: db_${APP_ENV}
-      MYSQL_USER: db_${APP_ENV}_user
+      MYSQL_DATABASE: ${DB_NAME}
+      MYSQL_USER: ${DB_USER}
       MYSQL_PASSWORD: ${DB_PASSWD}
       MYSQL_ROOT_PASSWORD: ${DB_PASSWD}
     volumes:
-      - 'mysql:/var/lib/mysql'
+      - db:/var/lib/mysql
     healthcheck:
-      test: ['CMD', 'mysqladmin', 'ping', '-h', '127.0.0.1', '-u', 'root', '-p${DB_PASSWD}']
+      test: ['CMD-SHELL', 'mysqladmin', 'ping', '-h', 'localhost', '-u', '${DB_USER}', '-p${DB_PASSWD}']
       timeout: 20s
       retries: 10
-  phpmyadmin:
-    image: phpmyadmin/phpmyadmin
-    container_name: ${APP_ENV}_mysqladmin
-    restart: always
-    ports:
-      - '3307:80'
-    depends_on:
-      mysql:
-        condition: service_started
-    profiles:
-      - db
-    networks:
-      - back-tier
-    environment:
-      PMA_HOST: ${APP_ENV}_mysql
-      PMA_PORT: 3306
-  php:
+    labels:
+      traefik.enable: false
+  app:
     build:
-      context: ./docker-images/php
+      context: ./containers/php
       args:
         PS_VERSION: ${PS_VERSION}
-        PS_DOMAIN: ${PS_DOMAIN:-localhost} # add machine domain to env (e.g. myshop.com) or let it like this to use container IP
-        DB_SERVER: ${APP_ENV}_mysql
-        DB_PORT: 3306
-        DB_NAME: db_${APP_ENV}
-        DB_USER: db_${APP_ENV}_user
+        PS_DOMAIN: ${PS_DOMAIN} # add machine domain to env (e.g. myshop.com) or let it like this to use container IP
+        DB_SERVER: ${DB_SERVER:-db}
+        DB_PORT: ${DB_PORT:-3306}
+        DB_NAME: ${DB_NAME}
+        DB_USER: ${DB_USER}
         DB_PASSWD: ${DB_PASSWD}
-        DB_PREFIX: ${APP_ENV}_
+        DB_PREFIX: ${DB_PREFIX}
         ADMIN_MAIL: ${ADMIN_MAIL}
         ADMIN_PASSWD: ${ADMIN_PASSWD}
         PS_LANGUAGE: ${PS_LANGUAGE}
@@ -60,28 +43,29 @@ services:
         PS_ENABLE_SSL: ${PS_ENABLE_SSL}
         PS_SHOP_NAME: ${PS_SHOP_NAME}
         PS_TIMEZONE: ${PS_TIMEZONE}
-        PS_FOLDER_ADMIN: ${PS_FOLDER_ADMIN}
+        PS_FOLDER_ADMIN: ${PS_FOLDER_ADMIN:-admin}
+        PS_FOLDER_INSTALL: ${PS_FOLDER_INSTALL:-install}
         PS_HANDLE_DYNAMIC_DOMAIN: ${PS_HANDLE_DYNAMIC_DOMAIN:-0}
         PS_BASE_URI: /
     labels:
-      email: e.garvisovenegas@gmail.com
-      env: ${APP_ENV}
+      traefik.enable: true
+      traefik.http.routers.app.rule: Host(`${PS_DOMAIN}`)
+      traefik.http.routers.app.entrypoints: web, websecure
+      traefik.http.routers.app.tls: true
+      traefik.http.routers.app.tls.certresolver: ${TRAEFIK_CERT_RESOLVER:-production}
     mem_limit: 256m
     mem_reservation: 128m
     memswap_limit: 512m
     cpus: 0.5
-    container_name: '${APP_ENV}_php'
     restart: on-failure:15
     depends_on:
-      mysql:
-        condition: service_started
+      db:
+        condition: service_healthy
     networks:
       - front-tier
       - back-tier
     volumes:
-      - 'www:/var/www/html'
-    env_file:
-      - 'env/.env.${APP_ENV}'
+      - 'app:/var/www/html'
     expose:
       - '9000'
     healthcheck:
@@ -89,35 +73,33 @@ services:
       timeout: 3s
       retries: 3
       start_period: 30s
-  nginx:
+  proxy:
     build:
-      context: ./docker-images
-      dockerfile: nginx/Dockerfile
+      context: ./containers/traefik
       args:
-        APP_ENV: ${APP_ENV}
-        NGINX_HOST: ${PS_DOMAIN:-localhost}
-        PS_FOLDER_ADMIN: ${PS_FOLDER_ADMIN}
-        PS_LANGUAGE: ${PS_LANGUAGE}
-    container_name: ${APP_ENV}_nginx
+        PROXY_RESOLVER_EMAIL: ${PROXY_RESOLVER_EMAIL}
     restart: always
-    depends_on:
-      - php
+    ports:
+      - 80:80
+      - 443:443
     profiles:
-      - web
+      - proxy
+    depends_on:
+      app:
+        condition: service_healthy
     networks:
       - front-tier
+      - back-tier
+    command: --providers.docker
     volumes:
-      - 'www:/var/www/html'
-      - 'nginx:/etc/nginx/conf.d'
-    ports:
-      - '${PS_PORT}:80'
-      # - '${PS_PORT_SSL}:443'
+      - proxy:/etc/traefik
+      - /var/run/docker.sock:/var/run/docker.sock:ro
 networks:
   front-tier:
     driver: bridge
   back-tier:
     driver: bridge
 volumes:
-  mysql:
-  www:
-  nginx:
+  db:
+  app:
+  proxy:
