--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,53 @@
-# config and documentation
-.vscode
-.env
+# dependencies
+/node_modules
+
+# testing
+__reports__
+**/coverage
+**/__coverage__
+
+# artifacts
+/dist
+/dev-dist
+/build
+tsconfig.build.tsbuildinfo
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+debug.log
+debug.json
+
+# OS
+.DS_Store
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/**/*
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/settings.json
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Yarn Integrity file
+.yarn - integrity
+
+src/tests/*
