fix: github action

--- a/.dockerignore
+++ b/.dockerignore
@@ -7,10 +7,10 @@ npm-debug.log
 **/.DS_Store
 
 # docker files
-Dockerfile
-**/Dockerfile
-docker-compose.yml
-.dockerignore
+# Dockerfile
+# **/Dockerfile
+# docker-compose.yml
+# .dockerignore
 
 # config and documentation
 .vscode
