--- a/.docker/mysql/Dockerfile
+++ b/.docker/mysql/Dockerfile
@@ -3,4 +3,4 @@ FROM mysql:8.0.32
 LABEL maintainer="Esteban Garviso <e.garvisovenegas@gmail.com>"
 
 # Add custom configuration
-COPY mysql.conf /etc/mysql/conf.d/
+COPY config/mysql.conf /etc/mysql/conf.d/
