--- a/.docker/nginx/config/nginx.conf
+++ b/.docker/nginx/config/nginx.conf
@@ -7,38 +7,22 @@
 server {
     # Server tokens hides the nginx identifying itself
     server_tokens off;
-    # Ipv4
+    server_name _;
+    # Server name
     listen 80;
-
-    # IPv6
     listen [::]:80;
 
-    # SSL Ipv4 & v6
-    listen 443 default_server ssl http2;
+    # SSL configuration
+    listen 443 ssl http2;
     listen [::]:443 ssl http2;
 
-    # Your SSL Certificates, don't forget to take a look at Certbot (https://certbot.eff.org)
-    ssl_certificate /etc/nginx/ssl/live/__NGINX_HOST__/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/live/__NGINX_HOST__/privkey.pem;
-
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
-    server_name __NGINX_HOST__ www.__NGINX_HOST__;
-
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-
-    location / {
-        return 301 https://$host$request_uri;
-    }
+    # location /.well-known/acme-challenge/ {
+    #     root /var/www/certbot;
+    # }
 
     root /var/www/html;
 
     index index.php
-
-    client_max_body_size __NGINX_MAX_UPLOAD__;
 
     # Redirect 404 errors to prestashop
     error_page 404 /index.php?controller=404;
@@ -83,21 +67,12 @@ server {
     # HSTS (Force clients to interact with your website using HTTPS only)
     # For enhanced security, register your site here: https://hstspreload.org/
     # WARNING: Don't use this if your site is not fully on HTTPS!
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains" preload; always;
+    # add_header Strict-Transport-Security "max-age=63072000; includeSubDomains" preload; always;
 
     rewrite ^/__PS_LANGUAGE__$ /__PS_LANGUAGE__/ redirect;
     rewrite ^/__PS_LANGUAGE__/(.*) /$1;
     rewrite ^/__PS_DEFAULT_LANGUAGE__$ /__PS_DEFAULT_LANGUAGE__/ redirect;
     rewrite ^/__PS_DEFAULT_LANGUAGE__/(.*) /$1;
-
-    # AlphaImageLoader for IE and fancybox
-    rewrite ^images_ie/?([^/]+)\.(jpe?g|png|gif)$ js/jquery/plugins/fancybox/images/$1.$2 last;
-
-    # Web service API
-    rewrite ^/api/?(.*)$ /webservice/dispatcher.php?url=$1 last;
-
-    # Installation sandbox
-    rewrite ^(/install(?:-dev)?/sandbox)/(.*) /$1/test.php last;
 
     # Cloudflare / Max CDN fix
     location ~* \.(eot|otf|ttf|woff|woff2)$ {
@@ -123,16 +98,30 @@ server {
         access_log off;
     }
 
-    # Images
-    rewrite ^/(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$1$2.jpg last;
-    rewrite ^/(\d)(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$2/$1$2$3.jpg last;
-    rewrite ^/(\d)(\d)(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$2/$3/$1$2$3$4.jpg last;
-    rewrite ^/(\d)(\d)(\d)(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$2/$3/$4/$1$2$3$4$5.jpg last;
-    rewrite ^/(\d)(\d)(\d)(\d)(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$2/$3/$4/$5/$1$2$3$4$5$6.jpg last;
-    rewrite ^/(\d)(\d)(\d)(\d)(\d)(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$2/$3/$4/$5/$6/$1$2$3$4$5$6$7.jpg last;
-    rewrite ^/(\d)(\d)(\d)(\d)(\d)(\d)(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$2/$3/$4/$5/$6/$7/$1$2$3$4$5$6$7$8.jpg last;
-    rewrite ^/(\d)(\d)(\d)(\d)(\d)(\d)(\d)(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$2/$3/$4/$5/$6/$7/$8/$1$2$3$4$5$6$7$8$9.jpg last;
-    rewrite ^/c/([\w.-]+)/.+\.jpg$ /img/c/$1.jpg last;
+    location / {
+        # Redirect pretty urls to index.php
+        try_files $uri $uri/ /index.php?$args;
+
+        # Images
+        rewrite ^/(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$1$2.jpg last;
+        rewrite ^/(\d)(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$2/$1$2$3.jpg last;
+        rewrite ^/(\d)(\d)(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$2/$3/$1$2$3$4.jpg last;
+        rewrite ^/(\d)(\d)(\d)(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$2/$3/$4/$1$2$3$4$5.jpg last;
+        rewrite ^/(\d)(\d)(\d)(\d)(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$2/$3/$4/$5/$1$2$3$4$5$6.jpg last;
+        rewrite ^/(\d)(\d)(\d)(\d)(\d)(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$2/$3/$4/$5/$6/$1$2$3$4$5$6$7.jpg last;
+        rewrite ^/(\d)(\d)(\d)(\d)(\d)(\d)(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$2/$3/$4/$5/$6/$7/$1$2$3$4$5$6$7$8.jpg last;
+        rewrite ^/(\d)(\d)(\d)(\d)(\d)(\d)(\d)(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$2/$3/$4/$5/$6/$7/$8/$1$2$3$4$5$6$7$8$9.jpg last;
+        rewrite ^/c/([\w.-]+)/.+\.jpg$ /img/c/$1.jpg last;
+
+        # AlphaImageLoader for IE and fancybox
+        rewrite ^images_ie/?([^/]+)\.(jpe?g|png|gif)$ js/jquery/plugins/fancybox/images/$1.$2 last;
+
+        # Web service API
+        rewrite ^/api/?(.*)$ /webservice/dispatcher.php?url=$1 last;
+
+        # Installation sandbox
+        rewrite ^(/install(?:-dev)?/sandbox)/(.*) /$1/test.php last;
+    }
 
     location ~ (/__PS_LANGUAGE__|/__PS_DEFAULT_LANGUAGE__)/index\.php$ {
         try_files $uri $uri/ /index.php?$args;
@@ -200,10 +189,11 @@ server {
         fastcgi_buffer_size 256k;
         fastcgi_buffers 256 16k;
         fastcgi_busy_buffers_size 256k;
+        client_max_body_size __VIRTUAL_MAX_UPLOAD__;
         # Temp file tweak
         fastcgi_max_temp_file_size 0;
         fastcgi_temp_file_write_size 256k;
 
-	    fastcgi_pass __PHP_FPM_CONTAINER_NAME__:9000;
+	    fastcgi_pass __PHP_CONTAINER_NAME__:9000;
     }
 }
