--- a/.docker/php/config/php-production.ini
+++ b/.docker/php/config/php-production.ini
@@ -369,7 +369,7 @@ expose_php = Off
 ; Maximum execution time of each script, in seconds
 ; http://php.net/max-execution-time
 ; Note: This directive is hardcoded to 0 for the CLI SAPI
-max_execution_time = 30
+max_execution_time = 300
 
 ; Maximum amount of time each script may spend parsing request data. It's a good
 ; idea to limit this time on productions servers in order to eliminate unexpectedly
@@ -379,7 +379,7 @@ max_execution_time = 30
 ; Development Value: 60 (60 seconds)
 ; Production Value: 60 (60 seconds)
 ; http://php.net/max-input-time
-max_input_time = 60
+max_input_time = 300
 
 ; Maximum input variable nesting level
 ; http://php.net/max-input-nesting-level
@@ -390,7 +390,7 @@ max_input_vars = 20000
 
 ; Maximum amount of memory a script may consume (128MB)
 ; http://php.net/memory-limit
-memory_limit = 256M
+memory_limit = 512M
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; Error handling and logging ;
@@ -657,7 +657,7 @@ auto_globals_jit = On
 ; Its value may be 0 to disable the limit. It is ignored if POST data reading
 ; is disabled through enable_post_data_reading.
 ; http://php.net/post-max-size
-post_max_size = 20M
+post_max_size = 22M
 
 ; Automatically add files before PHP document.
 ; http://php.net/auto-prepend-file
@@ -881,7 +881,7 @@ cli_server.color = On
 [Date]
 ; Defines the default timezone used by the date functions
 ; http://php.net/date.timezone
-date.timezone = Europe/Paris
+date.timezone = UTC
 
 ; http://php.net/date.default-latitude
 ;date.default_latitude = 31.7667
@@ -1401,7 +1401,7 @@ session.name = PHPSESSID
 
 ; Initialize session on request startup.
 ; http://php.net/session.auto-start
-session.auto_start = 0
+session.auto_start = Off
 
 ; Lifetime in seconds of cookie or, if 0, until browser is restarted.
 ; http://php.net/session.cookie-lifetime
@@ -1834,17 +1834,17 @@ ldap.max_links = -1
 opcache.enable=1
 
 ; Determines if Zend OPCache is enabled for the CLI version of PHP
-;opcache.enable_cli=0
+opcache.enable_cli=0
 
 ; The OPcache shared memory storage size.
 opcache.memory_consumption=256
 
 ; The amount of memory for interned strings in Mbytes.
-opcache.interned_strings_buffer=16
+opcache.interned_strings_buffer=32
 
 ; The maximum number of keys (scripts) in the OPcache hash table.
 ; Only numbers between 200 and 100000 are allowed.
-opcache.max_accelerated_files=20000
+opcache.max_accelerated_files=16229
 
 ; The maximum percentage of "wasted" memory until a restart is scheduled.
 opcache.max_wasted_percentage=10
@@ -1857,12 +1857,12 @@ opcache.max_wasted_percentage=10
 
 ; When disabled, you must reset the OPcache manually or restart the
 ; webserver for changes to the filesystem to take effect.
-opcache.validate_timestamps=1
+opcache.validate_timestamps=0
 
 ; How often (in seconds) to check file timestamps for changes to the shared
 ; memory storage allocation. ("1" means validate once per second, but only
 ; once per request. "0" means always validate)
-opcache.revalidate_freq=0
+opcache.revalidate_freq=10
 
 ; Enables or disables file search in include_path optimization
 opcache.revalidate_path=0
@@ -1877,10 +1877,10 @@ opcache.revalidate_path=0
 ;opcache.load_comments=1
 
 ; If enabled, a fast shutdown sequence is used for the accelerated code
-opcache.fast_shutdown=0
+opcache.fast_shutdown=1
 
 ; Allow file existence override (file_exists, etc.) performance feature.
-opcache.enable_file_override=1
+opcache.enable_file_override=0
 
 ; A bitmask, where each bit enables or disables the appropriate OPcache
 ; passes
