--- a/.env
+++ b/.env
@@ -1,26 +1,66 @@
-# Database
-DB_SERVER=db # Name of the service in docker-compose.yml
+PHP_PM_MAX_CHILDREN=5
+PHP_MEMORY_LIMIT=512M
+PHP_MEMORY_RESERVATION=256M
+PHP_CPUS_LIMIT=1
+PHP_CPUS_RESERVATION=0.5
+
+PHP_DATE_TIMEZONE=UTC
+PHP_SESSION_AUTO_START=Off
+PHP_SHORT_OPEN_TAG=Off
+PHP_DISPLAY_ERRORS=Off
+PHP_MAGIC_QUOTES_GPC=Off
+PHP_MAX_EXECUTION_TIME=300
+PHP_MAX_INPUT_TIME=300
+PHP_UPLOAD_MAX_FILESIZE=20M
+PHP_POST_MAX_SIZE=22M
+PHP_MAX_INPUT_VARS=20000
+PHP_ALLOW_URL_FOPEN=on
+PHP_OPCACHE_ENABLE=1
+PHP_OPCACHE_ENABLE_CLI=0
+PHP_OPCACHE_MEMORY_CONSUMPTION=256
+PHP_OPCACHE_INTERNED_STRINGS_BUFFER=32
+PHP_OPCACHE_MAX_ACCELERATED_FILES=16229
+PHP_OPCACHE_MAX_WASTED_PERCENTAGE=10
+PHP_OPCACHE_REVALIDATE_FREQ=10
+PHP_OPCACHE_FAST_SHUTDOWN=1
+PHP_OPCACHE_ENABLE_FILE_OVERRIDE=0
+PHP_OPCACHE_MAX_FILE_SIZE=0
+PHP_OPCACHE_VALIDATE_TIMESTAMPS=0
+PHP_OPCACHE_REVALIDATE_PATH=0
+PHP_REALPATH_CACHE_SIZE=4096K
+PHP_REALPATH_CACHE_TTL=600
+
+DB_SERVER=localhost
+DB_PORT=3306
 DB_NAME=db_name
 DB_USER=db_user
-DB_PASSWD=db_passwd
+DB_PASSWD=admin
+DB_PREFIX=ps_
 
-# SuperAdmin
 ADMIN_MAIL=demo@demo.com
 ADMIN_PASSWD=demodemo
 ADMIN_FIRSTNAME=John
 ADMIN_LASTNAME=Doe
 
-# PrestaShop
-PS_DOMAIN=prod.local # add machine domain to env (e.g. myshop.com) or let it like this to use container IP
+PS_DOMAIN=ps.local
+PS_HANDLE_DYNAMIC_DOMAIN=0
 PS_DEV_MODE=0
-PS_VERSION=8.0.1
-PS_ENABLE_SSL=1
+PS_ENABLE_SSL=0
 PS_LANGUAGE=es
 PS_COUNTRY=CL
 PS_TIMEZONE=America/Santiago
-PS_SHOP_NAME=Mi tienda
-PS_FOLDER_ADMIN=admin
-PS_FOLDER_INSTALL=install
+PS_SHOP_NAME="PS E-commerce"
+PS_SHOP_ACTIVITY=0
+PS_FOLDER_ADMIN=admin-ps
+PS_FOLDER_INSTALL=install-ps
 
-# Reverse Proxy
-PROXY_RESOLVER_EMAIL=info@prod.local
+PROXY_RESOLVER_EMAIL=info@demo.com
+PROXY_API_DASHBOARD=0
+PROXY_API_INSECURE=0
+PROXY_LOG_LEVEL=ERROR
+PROXY_RESOLVER=none
+PROXY_NGINX_ENTRYPOINTS=web
+PROXY_ADD_SELF_SIGNED_CERTIFICATES=0
+
+COMPOSE_PROJECT_NAME=ps-ecommerce
+COMPOSE_PROFILES=database,reverse-proxy
