fix: rollback to nginx instead of traefik proxy

--- a/.docker/nginx/config/nginx.conf
+++ b/.docker/nginx/config/nginx.conf
@@ -7,18 +7,13 @@
 server {
     # Server tokens hides the nginx identifying itself
     server_tokens off;
-    server_name _;
+
     # Server name
+    server_name _;
+
+    # Port to listen
     listen 80;
     listen [::]:80;
-
-    # SSL configuration
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
-
-    # location /.well-known/acme-challenge/ {
-    #     root /var/www/certbot;
-    # }
 
     root /var/www/html;
 
@@ -33,8 +28,8 @@ server {
     gzip_proxied any;
 
     # Can be enhance to 5, but it can slow you server
-    # gzip_comp_level    5;
-    # gzip_min_length    256;
+    gzip_comp_level    6;
+    gzip_min_length    1000;
 
     gzip_types
         application/atom+xml
@@ -69,6 +64,7 @@ server {
     # WARNING: Don't use this if your site is not fully on HTTPS!
     # add_header Strict-Transport-Security "max-age=63072000; includeSubDomains" preload; always;
 
+    # [EDIT] If you are using multiple languages.
     rewrite ^/__PS_LANGUAGE__$ /__PS_LANGUAGE__/ redirect;
     rewrite ^/__PS_LANGUAGE__/(.*) /$1;
     rewrite ^/__PS_DEFAULT_LANGUAGE__$ /__PS_DEFAULT_LANGUAGE__/ redirect;
@@ -98,37 +94,34 @@ server {
         access_log off;
     }
 
-    location / {
-        # Redirect pretty urls to index.php
-        try_files $uri $uri/ /index.php?$args;
+    # Images
+    rewrite ^/(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$1$2.jpg last;
+    rewrite ^/(\d)(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$2/$1$2$3.jpg last;
+    rewrite ^/(\d)(\d)(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$2/$3/$1$2$3$4.jpg last;
+    rewrite ^/(\d)(\d)(\d)(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$2/$3/$4/$1$2$3$4$5.jpg last;
+    rewrite ^/(\d)(\d)(\d)(\d)(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$2/$3/$4/$5/$1$2$3$4$5$6.jpg last;
+    rewrite ^/(\d)(\d)(\d)(\d)(\d)(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$2/$3/$4/$5/$6/$1$2$3$4$5$6$7.jpg last;
+    rewrite ^/(\d)(\d)(\d)(\d)(\d)(\d)(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$2/$3/$4/$5/$6/$7/$1$2$3$4$5$6$7$8.jpg last;
+    rewrite ^/(\d)(\d)(\d)(\d)(\d)(\d)(\d)(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$2/$3/$4/$5/$6/$7/$8/$1$2$3$4$5$6$7$8$9.jpg last;
+    rewrite ^/c/([\w.-]+)/.+\.jpg$ /img/c/$1.jpg last;
 
-        # Images
-        rewrite ^/(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$1$2.jpg last;
-        rewrite ^/(\d)(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$2/$1$2$3.jpg last;
-        rewrite ^/(\d)(\d)(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$2/$3/$1$2$3$4.jpg last;
-        rewrite ^/(\d)(\d)(\d)(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$2/$3/$4/$1$2$3$4$5.jpg last;
-        rewrite ^/(\d)(\d)(\d)(\d)(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$2/$3/$4/$5/$1$2$3$4$5$6.jpg last;
-        rewrite ^/(\d)(\d)(\d)(\d)(\d)(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$2/$3/$4/$5/$6/$1$2$3$4$5$6$7.jpg last;
-        rewrite ^/(\d)(\d)(\d)(\d)(\d)(\d)(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$2/$3/$4/$5/$6/$7/$1$2$3$4$5$6$7$8.jpg last;
-        rewrite ^/(\d)(\d)(\d)(\d)(\d)(\d)(\d)(\d)(-[\w-]+)?/.+\.jpg$ /img/p/$1/$2/$3/$4/$5/$6/$7/$8/$1$2$3$4$5$6$7$8$9.jpg last;
-        rewrite ^/c/([\w.-]+)/.+\.jpg$ /img/c/$1.jpg last;
+    # AlphaImageLoader for IE and fancybox
+    rewrite ^images_ie/?([^/]+)\.(jpe?g|png|gif)$ js/jquery/plugins/fancybox/images/$1.$2 last;
 
-        # AlphaImageLoader for IE and fancybox
-        rewrite ^images_ie/?([^/]+)\.(jpe?g|png|gif)$ js/jquery/plugins/fancybox/images/$1.$2 last;
+    # Web service API
+    rewrite ^/api/?(.*)$ /webservice/dispatcher.php?url=$1 last;
 
-        # Web service API
-        rewrite ^/api/?(.*)$ /webservice/dispatcher.php?url=$1 last;
-
-        # Installation sandbox
-        rewrite ^(/install(?:-dev)?/sandbox)/(.*) /$1/test.php last;
-    }
+    # Installation sandbox
+    rewrite ^(/install(?:-dev)?/sandbox)/(.*) /$1/test.php last;
 
     location ~ (/__PS_LANGUAGE__|/__PS_DEFAULT_LANGUAGE__)/index\.php$ {
+        # Redirect pretty urls to index.php
         try_files $uri $uri/ /index.php?$args;
     }
 
     try_files $uri $uri/ /index.php?$args;
 
+    # [EDIT] Replace 'admin-dev' in this block with the name of your admin directory.
     location /__PS_FOLDER_ADMIN__/ {
         if (!-e $request_filename) {
             rewrite ^ /__PS_FOLDER_ADMIN__/index.php last;
