--- a/.env
+++ b/.env
@@ -30,7 +30,7 @@ PHP_OPCACHE_REVALIDATE_PATH=0
 PHP_REALPATH_CACHE_SIZE=4096K
 PHP_REALPATH_CACHE_TTL=600
 
-DB_SERVER=localhost
+DB_SERVER=mysql
 DB_PORT=3306
 DB_NAME=db_name
 DB_USER=db_user
@@ -42,7 +42,7 @@ ADMIN_PASSWD=demodemo
 ADMIN_FIRSTNAME=John
 ADMIN_LASTNAME=Doe
 
-PS_DOMAIN=ps.local
+PS_DOMAIN=localhost
 PS_HANDLE_DYNAMIC_DOMAIN=0
 PS_DEV_MODE=0
 PS_ENABLE_SSL=0
@@ -55,12 +55,17 @@ PS_FOLDER_ADMIN=admin-ps
 PS_FOLDER_INSTALL=install-ps
 
 PROXY_RESOLVER_EMAIL=info@demo.com
-PROXY_API_DASHBOARD=0
-PROXY_API_INSECURE=0
+PROXY_API_DASHBOARD=1
+PROXY_API_INSECURE=1
 PROXY_LOG_LEVEL=ERROR
-PROXY_RESOLVER=none
+PROXY_RESOLVER=staging
 PROXY_NGINX_ENTRYPOINTS=web
-PROXY_ADD_SELF_SIGNED_CERTIFICATES=0
+PROXY_INTRANET_IP_LIST=192.168.0.0/16,172.0.0.0/8
+PROXY_NETWORK_NAME=frontend
+PROXY_NETWORK_EXTERNAL=false
+PROXY_NETWORK_DRIVER=bridge
+
+NGINX_PROXY_MIDDLEWARES=redirect-non-www@file
 
 COMPOSE_PROJECT_NAME=ps-ecommerce
-COMPOSE_PROFILES=database,reverse-proxy
+COMPOSE_PROFILES=database
