--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -146,7 +146,7 @@ services:
     command: --providers.docker
     volumes:
       - /etc/localtime:/etc/localtime:ro
-      - /var/run/docker.sock:/var/run/docker.sock:roß
+      - /var/run/docker.sock:/var/run/docker.sock:ro
       - traefik:/etc/traefik
       - logs-traefik:/var/log/traefik
 networks:
